# varjson5

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
